--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
+    "clsx": "^2.1.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.0",
     "prettier": "^3.2.5",
