--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-react": "^7.34.0",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
+    "react-activity": "^2.1.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
