--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "vrx_seller",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "main": "main.js",
+  "author": "Pablo Santos",
+  "description": "VRX Seller",
+  "type": "module",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -28,7 +33,44 @@
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx,json}'",
     "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "electron": "electron .",
+    "pack:linux": "electron-builder --linux",
+    "pack:win": "electron-builder --win"
+  },
+  "build": {
+    "appId": "com.vrx.vrxseller",
+    "extends": null,
+    "win": {
+      "target": "nsis",
+      "icon": "build/assets/favicon.ico"
+    },
+    "nsis": {
+      "deleteAppDataOnUninstall": true,
+      "include": "build/installer/nsis-installer.nsh",
+      "oneClick": false,
+      "allowElevation": true,
+      "allowToChangeInstallationDirectory": true,
+      "runAfterFinish": false,
+      "installerHeaderIcon": "build/assets/favicon.ico"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "icon": "build/assets"
+    },
+    "extraFiles": [
+      {
+        "from": "build/",
+        "to": "build/"
+      },
+      {
+        "from": "src/scripts/",
+        "to": "src/scripts/"
+      }
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -49,7 +91,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.18",
+    "electron": "^29.1.4",
+    "electron-builder": "^24.13.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
