--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "electron": "electron .",
-    "pack:linux": "electron-builder --linux",
     "pack:win": "electron-builder --win"
   },
   "build": {
@@ -69,6 +68,10 @@
       {
         "from": "src/scripts/",
         "to": "src/scripts/"
+      },
+      {
+        "from": "src/api.rb",
+        "to": "src/api.rb"
       }
     ]
   },
