feat: Remove packages and files from projet at uninstall moment

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     },
     "nsis": {
       "deleteAppDataOnUninstall": true,
-      "include": "build/installer/nsis-installer.nsh",
+      "include": "build/installer.nsh",
       "oneClick": false,
       "allowElevation": true,
       "allowToChangeInstallationDirectory": true,
